samples/_failures_safe/1761316900_2374d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0de83d8e.c: In function ‘execute_operation’:
./samples/SAFE/__tmp_0de83d8e.c:157:16: error: expected ‘;’ at end of input
  157 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_0de83d8e.c:157:9: error: expected declaration or statement at end of input
  157 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_0de83d8e.c:157:9: error: expected declaration or statement at end of input
